# nanoGPT

./: adapter.py  pyproject.toml  train.py
config/: finetune_shakespeare.py
