[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Harsh Vardhan <openroadie@chez-vardhan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
#torch = { url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.0%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl" }
torch = "^2.0.0"
python = "^3.8"
numpy = "^1.24.3"
transformers = "^4.28.1"
datasets = "^2.12.0"
tiktoken = "^0.3.3"
wandb = "^0.15.0"
tqdm = "^4.65.0"
jupyter = "^1.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
